@@ -21,7 +21,7 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.StandardCopyOption;
 import java.util.zip.ZipInputStream;
@@ -89,7 +89,7 @@ public class PerfTests extends BuilderTests
 		File tempFile = new File(tmpRoot, nameInProject);
 		if (!tempFile.isFile() || tempFile.length() != size) {			
 			String githubUrl = GITHUB_TESTS_BINARIES + nameInProject;
-			try(BufferedInputStream bin = new BufferedInputStream(new URL(githubUrl).openStream())){
+			try(BufferedInputStream bin = new BufferedInputStream(URI.create(githubUrl).toURL().openStream())){
 				Files.copy(bin, tempFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
 			}
 		}
@@ -142,9 +142,9 @@ public class PerfTests extends BuilderTests
 		assertNoUnexpectedProblems();
 
 		System.out.println("Performing full build without apt...");
-		long start = System.currentTimeMillis();
+		long startNanos = System.nanoTime();
 		proj.build(IncrementalProjectBuilder.FULL_BUILD, null);
-		long totalWithoutAPT = System.currentTimeMillis() - start;
+		long totalWithoutAPT = (System.nanoTime() - startNanos) / 1_000_000L;
 		System.out.println("Completed full build without APT in " + totalWithoutAPT + "ms.");
 
 		assertNoUnexpectedProblems();
@@ -156,9 +156,9 @@ public class PerfTests extends BuilderTests
 		assertNoUnexpectedProblems();
 
 		System.out.println("Performing full build with apt...");
-		start = System.currentTimeMillis();
+		startNanos = System.nanoTime();
 		proj.build(IncrementalProjectBuilder.FULL_BUILD, null);
-		long totalWithAPT = System.currentTimeMillis() - start;
+		long totalWithAPT = (System.nanoTime() - startNanos) / 1_000_000L;
 		System.out.println("Completed full build with APT in " + totalWithAPT + "ms.");
 
 		assertNoUnexpectedProblems();
