@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2012, 2024 IBM Corporation and others.
+ * Copyright (c) 2012, 2025 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -47,9 +47,7 @@ package org.eclipse.jdt.internal.compiler.ast;
 
 import static org.eclipse.jdt.internal.compiler.ast.ExpressionContext.INVOCATION_CONTEXT;
 
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
@@ -80,8 +78,7 @@ import org.eclipse.jdt.internal.compiler.problem.AbortMethod;
 import org.eclipse.jdt.internal.compiler.problem.AbortType;
 import org.eclipse.jdt.internal.compiler.problem.ProblemSeverities;
 
-@SuppressWarnings({"rawtypes", "unchecked"})
-public class LambdaExpression extends FunctionalExpression implements IPolyExpression, ReferenceContext, ProblemSeverities {
+public class LambdaExpression extends FunctionalExpression implements IPolyExpression, ReferenceContext, ProblemSeverities, TypeOrLambda {
 	public Argument [] arguments;
 	private TypeBinding [] argumentTypes;
 	public int arrowPosition;
@@ -91,7 +88,6 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 	boolean voidCompatible = true;
 	boolean valueCompatible = false;
 	boolean returnsValue;
-	private final boolean requiresGenericSignature;
 	boolean returnsVoid;
 	public LambdaExpression original = this;
 	private boolean committed = false;
@@ -101,32 +97,34 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 	private int outerLocalVariablesSlotSize = 0;
 	private boolean assistNode = false;
 	private ReferenceBinding classType;
-	private Set thrownExceptions;
+	private Set<TypeBinding> thrownExceptions;
 	private static final SyntheticArgumentBinding [] NO_SYNTHETIC_ARGUMENTS = new SyntheticArgumentBinding[0];
 	private static final Block NO_BODY = new Block(0);
 	private HashMap<TypeBinding, LambdaExpression> copiesPerTargetType;
 	protected Expression [] resultExpressions = NO_EXPRESSIONS;
-	public InferenceContext18 inferenceContext; // when performing tentative resolve keep a back reference to the driving context
 	private Map<Integer/*sourceStart*/, LocalTypeBinding> localTypes; // support look-up of a local type from this lambda copy
-	public boolean argumentsTypeVar = false;
+	public boolean hasVarTypedArguments = false;
 	int firstLocalLocal; // analysis index of first local variable (if any) post parameter(s) in the lambda; ("local local" as opposed to "outer local")
 
 	private List<ClassScope> scopesInEarlyConstruction;
 
-	public LambdaExpression(CompilationResult compilationResult, boolean assistNode, boolean requiresGenericSignature) {
+	public LambdaExpression(CompilationResult compilationResult, boolean assistNode) {
 		super(compilationResult);
 		this.assistNode = assistNode;
-		this.requiresGenericSignature = requiresGenericSignature;
 		setArguments(NO_ARGUMENTS);
 		setBody(NO_BODY);
 	}
 
-	public LambdaExpression(CompilationResult compilationResult, boolean assistNode) {
-		this(compilationResult, assistNode, false);
-	}
-
 	public void setArguments(Argument [] arguments) {
 		this.arguments = arguments != null ? arguments : ASTNode.NO_ARGUMENTS;
+		for (Argument argument : this.arguments) {
+			if (argument.hasElidedType())
+				this.bits |= ArgumentsTypeElided;
+			else if (argument.type instanceof SingleTypeReference str &&  CharOperation.equals(str.token, TypeConstants.VAR)) {
+				this.bits |= ArgumentsTypeElided;
+				this.hasVarTypedArguments = true;
+			}
+		}
 		this.argumentTypes = new TypeBinding[arguments != null ? arguments.length : 0];
 	}
 
@@ -251,9 +249,20 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 			if (this.original == this)
 				this.ordinal = recordFunctionalType(blockScope);
 
-			if (!argumentsTypeElided) {
-				for (int i = 0; i < argumentsLength; i++)
-					this.argumentTypes[i] = this.arguments[i].type.resolveType(blockScope, true /* check bounds*/);
+			boolean lvtiAllowed = blockScope.compilerOptions().sourceLevel >= ClassFileConstants.JDK11;
+			boolean argumentIsVarTyped = false, priorArgumentIsVarTyped = false;
+			for (int i = 0; i < argumentsLength; i++, priorArgumentIsVarTyped = argumentIsVarTyped) {
+				final Argument argument = this.arguments[i];
+				if (argument.hasElidedType())
+					continue;
+				argumentIsVarTyped = argument.type instanceof SingleTypeReference singleTypeRef && CharOperation.equals(singleTypeRef.token, TypeConstants.VAR);
+				if (i > 0 && argumentIsVarTyped != priorArgumentIsVarTyped) {
+					blockScope.problemReporter().varCannotBeMixedWithNonVarParams(argumentIsVarTyped ? argument : this.arguments[i - 1]);
+					return this.resolvedType = null; // structurally FUBAR, bail out ...
+				}
+				if (lvtiAllowed && argumentIsVarTyped)
+					continue;
+				this.argumentTypes[i] = argument.type.resolveType(blockScope, true /* check bounds*/);
 			}
 			if (this.expectedType == null && this.expressionContext == INVOCATION_CONTEXT) {
 				return new PolyTypeBinding(this);
@@ -279,13 +288,6 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 							haveDescriptor ? this.descriptor.thrownExceptions : Binding.NO_EXCEPTIONS,
 							blockScope.enclosingSourceType());
 		this.binding.typeVariables = Binding.NO_TYPE_VARIABLES;
-
-		MethodScope enm = this.scope.namedMethodScope();
-		MethodBinding enmb = enm == null ? null : enm.referenceMethodBinding();
-		if (enmb != null && enmb.isViewedAsDeprecated()) {
-			this.binding.modifiers |= ExtraCompilerModifiers.AccDeprecatedImplicitly;
-			this.binding.tagBits |= enmb.tagBits & TagBits.AnnotationTerminallyDeprecated;
-		}
 
 		boolean argumentsHaveErrors = false;
 		if (haveDescriptor) {
@@ -362,7 +364,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 			}
 		}
 		boolean parametersHaveErrors = false;
-		boolean genericSignatureNeeded = this.requiresGenericSignature || blockScope.compilerOptions().generateGenericSignatureForLambdaExpressions;
+		boolean genericSignatureNeeded = blockScope.compilerOptions().generateGenericSignatureForLambdaExpressions;
 		TypeBinding[] expectedParameterTypes = new TypeBinding[argumentsLength];
 		for (int i = 0; i < argumentsLength; i++) {
 			Argument argument = this.arguments[i];
@@ -399,7 +401,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 				}
 			}
 		}
-		if (this.argumentsTypeVar) {
+		if (this.hasVarTypedArguments) {
 			for (int i = 0; i < argumentsLength; ++i) {
 				this.arguments[i].type.resolvedType = expectedParameterTypes[i];
 			}
@@ -533,7 +535,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 
 	@Override
 	public boolean argumentsTypeElided() {
-		return (this.arguments.length > 0 && this.arguments[0].hasElidedType()) || this.argumentsTypeVar;
+		return (this.bits & ArgumentsTypeElided) != 0;
 	}
 
 	private void analyzeExceptions() {
@@ -545,7 +547,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 			this.body.analyseCode(this.scope,
 									 ehfc = new ExceptionInferenceFlowContext(null, this, Binding.NO_EXCEPTIONS, null, this.scope, FlowInfo.DEAD_END),
 									 UnconditionalFlowInfo.fakeInitializedFlowInfo(this.firstLocalLocal, this.scope.referenceType().maxFieldCount));
-			this.thrownExceptions = ehfc.extendedExceptions == null ? Collections.emptySet() : new HashSet<TypeBinding>(ehfc.extendedExceptions);
+			this.thrownExceptions = ehfc.extendedExceptions == null ? Set.of() : Set.copyOf(ehfc.extendedExceptions);
 		} catch (Exception e) {
 			// drop silently.
 		} finally {
@@ -557,6 +559,8 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 
 		if (this.ignoreFurtherInvestigation)
 			return flowInfo;
+
+		addSyntheticArgumentsBeyondEarlyConstructionContext(false, this.enclosingScope);
 
 		FlowInfo lambdaInfo = flowInfo.copy(); // what happens in vegas, stays in vegas ...
 		ExceptionHandlingFlowContext methodContext =
@@ -877,7 +881,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 
 		LambdaExpression copy = null;
 		try {
-			copy = cachedResolvedCopy(targetType, argumentsTypeElided(), false, null, skope); // if argument types are elided, we don't care for result expressions against *this* target, any valid target is OK.
+			copy = cachedResolvedCopy(targetType, argumentsTypeElided(), false, skope); // if argument types are elided, we don't care for result expressions against *this* target, any valid target is OK.
 		} catch (CopyFailureException cfe) {
 			if (this.assistNode)
 				return CompatibilityResult.COMPATIBLE; // can't type check result expressions, just say yes.
@@ -888,7 +892,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 
 		// copy here is potentially compatible with the target type and has its shape fully computed: i.e value/void compatibility is determined and result expressions have been gathered.
 		targetType = findGroundTargetType(this.enclosingScope, targetType, targetType, argumentsTypeElided());
-		MethodBinding sam = targetType.getSingleAbstractMethod(this.enclosingScope, true);
+		MethodBinding sam = targetType == null ? null : targetType.getSingleAbstractMethod(this.enclosingScope, true);
 		if (sam == null || sam.problemId() == ProblemReasons.NoSuchSingleAbstractMethod) {
 			return CompatibilityResult.INCOMPATIBLE;
 		}
@@ -931,7 +935,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 		private static final long serialVersionUID = 1L;
 	}
 
-	private LambdaExpression cachedResolvedCopy(TypeBinding targetType, boolean anyTargetOk, boolean requireExceptionAnalysis, InferenceContext18 context, Scope outerScope) {
+	private LambdaExpression cachedResolvedCopy(TypeBinding targetType, boolean anyTargetOk, boolean requireExceptionAnalysis, Scope outerScope) {
 		if (this.committed && outerScope instanceof BlockScope) {
 			this.enclosingScope = (BlockScope) outerScope;
 			// trust the result of any previous shape analysis:
@@ -976,7 +980,6 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 
 				copy.setExpressionContext(this.expressionContext);
 				copy.setExpectedType(targetType);
-				copy.inferenceContext = context;
 				TypeBinding type = copy.resolveType(this.enclosingScope, true);
 				if (type == null || !type.isValidBinding())
 					return null;
@@ -1004,10 +1007,10 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 	 * @return a resolved copy of 'this' or null if significant errors where encountered
 	 */
 	@Override
-	public LambdaExpression resolveExpressionExpecting(TypeBinding targetType, Scope skope, InferenceContext18 context) {
+	public LambdaExpression resolveExpressionExpecting(TypeBinding targetType, Scope skope) {
 		LambdaExpression copy = null;
 		try {
-			copy = cachedResolvedCopy(targetType, false, true, context, null /* to be safe we signal: not yet committed */);
+			copy = cachedResolvedCopy(targetType, false, true, null /* to be safe we signal: not yet committed */);
 		} catch (CopyFailureException cfe) {
 			return null;
 		}
@@ -1060,7 +1063,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 
 		LambdaExpression copy;
 		try {
-			copy = cachedResolvedCopy(s, true /* any resolved copy is good */, false, null, null /*not yet committed*/); // we expect a cached copy - otherwise control won't reach here.
+			copy = cachedResolvedCopy(s, true /* any resolved copy is good */, false, null /*not yet committed*/); // we expect a cached copy - otherwise control won't reach here.
 		} catch (CopyFailureException cfe) {
 			if (this.assistNode)
 				return false;
@@ -1199,7 +1202,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 
 	public Set<TypeBinding> getThrownExceptions() {
 		if (this.thrownExceptions == null)
-			return Collections.emptySet();
+			return Set.of();
 		return this.thrownExceptions;
 	}
 
@@ -1260,7 +1263,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 		}
 		codeStream.pushPatternAccessTrapScope(this.scope);
 		if (this.scopesInEarlyConstruction != null) {
-			// JEP 482: restore early construction context info into scopes:
+			// JEP 513: restore early construction context info into scopes:
 			for (ClassScope classScope : this.scopesInEarlyConstruction)
 				classScope.insideEarlyConstructionContext = true;
 		}
@@ -1313,7 +1316,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 				return;
 		}
 		System.arraycopy(this.outerLocalVariables, 0, this.outerLocalVariables = new SyntheticArgumentBinding[newSlot + 1], 0, newSlot);
-		this.outerLocalVariables[newSlot] = syntheticLocal = new SyntheticArgumentBinding(actualOuterLocalVariable);
+		this.outerLocalVariables[newSlot] = syntheticLocal = new SyntheticArgumentBinding(actualOuterLocalVariable, this.scope);
 		syntheticLocal.resolvedPosition = this.outerLocalVariablesSlotSize; // may need adjusting later if we need to generate an instance method for the lambda.
 		syntheticLocal.declaringScope = this.scope;
 		int parameterCount = this.binding.parameters.length;
@@ -1346,6 +1349,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 		this.outerLocalVariables[newSlot] = syntheticLocal = new SyntheticArgumentBinding(enclosingType);
 		syntheticLocal.resolvedPosition = this.outerLocalVariablesSlotSize; // may need adjusting later if we need to generate an instance method for the lambda.
 		syntheticLocal.declaringScope = this.scope;
+		syntheticLocal.actualOuterLocalVariable = getActualOuterLocalFromEnclosingScope(enclosingType);
 		int parameterCount = this.binding.parameters.length;
 		TypeBinding [] newParameters = new TypeBinding[parameterCount + 1];
 		newParameters[newSlot] = enclosingType;
@@ -1365,6 +1369,23 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 		}
 		return syntheticLocal;
 	}
+
+	@Override
+	public void ensureSyntheticOuterAccess(SourceTypeBinding targetEnclosing) {
+		this.mapSyntheticEnclosingTypes.computeIfAbsent(targetEnclosing, this::addSyntheticArgument);
+	}
+
+	private SyntheticArgumentBinding getActualOuterLocalFromEnclosingScope(ReferenceBinding enclosingType) {
+		// check if access to enclosingType actually relates to a synthetic argument of an outer constructor:
+		MethodScope currentMethodScope = this.scope.enclosingMethodScope();
+		if (currentMethodScope != null && currentMethodScope.isInsideInitializerOrConstructor()) {
+			// use synthetic constructor arguments if possible
+			if (currentMethodScope.enclosingSourceType() instanceof NestedTypeBinding nested)
+				return nested.getSyntheticArgument(enclosingType, true, currentMethodScope.isConstructorCall);
+		}
+		return null;
+	}
+
 	public SyntheticArgumentBinding getSyntheticArgument(LocalVariableBinding actualOuterLocalVariable) {
 		for (int i = 0, length = this.outerLocalVariables == null ? 0 : this.outerLocalVariables.length; i < length; i++)
 			if (this.outerLocalVariables[i].actualOuterLocalVariable == actualOuterLocalVariable)
@@ -1402,7 +1423,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 
 	public TypeBinding[] getMarkerInterfaces() {
 		if (this.expectedType instanceof IntersectionTypeBinding18) {
-			Set markerBindings = new LinkedHashSet();
+			Set<TypeBinding> markerBindings = new LinkedHashSet<>();
 			IntersectionTypeBinding18 intersectionType = (IntersectionTypeBinding18)this.expectedType;
 			TypeBinding[] intersectionTypes = intersectionType.intersectingTypes;
 			TypeBinding samType = intersectionType.getSAMType(this.enclosingScope);
@@ -1416,7 +1437,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 				markerBindings.add(typeBinding);
 			}
 			if (markerBindings.size() > 0) {
-				return (TypeBinding[])markerBindings.toArray(new TypeBinding[markerBindings.size()]);
+				return markerBindings.toArray(TypeBinding[]::new);
 			}
 		}
 		return null;
@@ -1488,7 +1509,7 @@ public class LambdaExpression extends FunctionalExpression implements IPolyExpre
 
 		@Override
 		public TypeBinding substitute(Substitution substitution, TypeBinding originalType) {
-			if (originalType.isLocalType()) {
+			if (originalType != null && originalType.isLocalType()) {
 				LocalTypeBinding orgLocal = (LocalTypeBinding) originalType.original();
 				MethodScope lambdaScope2 = orgLocal.scope.enclosingLambdaScope();
 				if (lambdaScope2 != null) {
